--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,11 @@
     "core-js": "^3.6.5",
     "dotenv": "^8.2.0",
     "jwt-decode": "^3.1.2",
+    "qrcode.vue": "^1.7.0",
     "vue": "^2.6.12",
+    "vue-html2pdf": "^1.8.0",
     "vue-image-upload-resize": "^2.3.0",
+    "vue-qrcode-reader": "^2.3.16",
     "vue-router": "^3.4.9",
     "vuetify": "^2.2.11",
     "vuetify-image-upload-resize": "^1.0.7",
